# Order_Aplication

./: README.md  pyproject.toml
docker/: docker-compose.yml
src/: __init__.py  app.py  config.py  initialize_db.py
src/handlers/: client_handler.py  db_handler.py  order_handler.py  product_handler.py
src/models/: models.py
src/routes/: __init__.py
src/routes/clients/: client_routes.py
src/routes/clients/templates/: clients.html  create_client.html  get_clients.html
src/routes/users/: user_routes.py
src/routes/users/templates/: create_users.html  get_users.html  modify_users.html  users.html
src/templates/: home.html
